5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1735_2524.log
== TEST (2019-05-09 11:58:34) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	print(g)
   if(x%2==0):
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(z)
	else:
		z=(sin((pi/g)))/(sin((3*pi)/(2*g)))
		print(z)
		
		
		
		
	
   
-- ERROR:
File "XXXX", line 8
    if(x%2==0):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:58:59) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	print(g)
    if(x%2==0):
		   z=(sin((pi/g)))/(sin((2*pi)/g))
		   print(z)
	   else:
		   z=(sin((pi/g)))/(sin((3*pi)/(2*g)))
		   print(z)
		
		
		
		
	
   
-- ERROR:
File "XXXX", line 8
    if(x%2==0):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:59:27) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	print(g)
      if(x%2==0):
		      z=(sin((pi/g)))/(sin((2*pi)/g))
		      print(z)
	   else:
		      z=(sin((pi/g)))/(sin((3*pi)/(2*g)))
		      print(z)
		
		
		
		
	
   
-- ERROR:
File "XXXX", line 8
    if(x%2==0):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 12:00:08) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	if(x%2==0):
		      z=(sin((pi/g)))/(sin((2*pi)/g))
		      print(z)
	else:
		      z=(sin((pi/g)))/(sin((3*pi)/(2*g)))
		      print(z)
		
		
		
		
	
   
-- OUTPUT:
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037844386
0.8660254037
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 12:00:33) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(x%2==0):
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(z)
	else:
		z=(sin((pi/g)))/(sin((3*pi)/(2*g)))
		print(z)
		
		
		
		
	
   
-- OUTPUT:
0.7653668647301795
0.7265425280053609
0.7071067811865475
0.6958954867009435
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 12:00:54) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(x%2==0):
		print(g)	
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(z)
	else:
		print(g)
		z=(sin((pi/g)))/(sin((3*pi)/(2*g)))
		print(z)
		
		
		
		
	
   
-- OUTPUT:
4
0.7653668647301795
5
0.7265425280053609
6
0.7071067811865475
7
0.6958954867009435
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 12:01:27) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(x%2==0):
		print(g)	
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(round(z,4))
	else:
		print(g)
		z=(sin((pi/g)))/(sin((3*pi)/(2*g)))
		print(round(z,4))
		
		
		
		
	
   
-- EXECUTION TIME:
0.138585
-- TEST CASE 1:
---- input:
7
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
---- user output:
4
0.7654
5
0.7265
6
0.7071
7
0.6959
-- TEST CASE 2:
---- input:
5
---- correct output:
4 0.7071
5 0.7265
---- user output:
4
0.7654
5
0.7265
-- TEST CASE 3:
---- input:
16
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
8 0.5412
9 0.684
10 0.5257
11 0.6782
12 0.5176
13 0.6749
14 0.5129
15 0.6728
16 0.5098
---- user output:
4
0.7071
5
0.618
6
0.5774
7
0.555
8
0.5412
9
0.5321
10
0.5257
11
0.5211
12
0.5176
13
0.515
14
0.5129
15
0.5112
16
0.5098
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 12:01:30) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(x%2==0):
		print(g)	
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(round(z,4))
	else:
		print(g)
		z=(sin((pi/g)))/(sin((3*pi)/(2*g)))
		print(round(z,4))
		
		
		
		
	
   
-- OUTPUT:
4
0.7654
5
0.7265
6
0.7071
7
0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 12:03:14) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(x%2==0):
		print(g)	
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(round(z,4))
	else:
		print(g)
		z=(sin(pi/g))/(sin((3*pi)/(2*g)))
		print(round(z,4))
		
		
		
		
	
   
-- OUTPUT:
4
0.7654
5
0.7265
6
0.7071
7
0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 12:03:45) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(x%2==0):
		print(g)	
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(round(z,4))
	else:
		print(g)
		f=(sin(pi/g))/(sin((3*pi)/(2*g)))
		print(round(f,4))
		
		
		
		
	
   
-- OUTPUT:
4
0.7654
5
0.7265
6
0.7071
7
0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 12:05:27) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(x%2==0):
		print(g)	
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(round(z,4))
	else:
		print(g)
		f=(sin(pi/(radians(g)))/(sin((3*pi)/(2*(radians(g))))))
		print(round(f,4))
		
		
		
		
	
   
-- OUTPUT:
4
-0.8517
5
1.7749
6
-1.1612
7
0.7173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 10:20:13) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(x%2==0):
		print(g)	
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(round(z,4))
	else:
		print(g)
		f=(sin(pi/g))/(sin((3*pi)/(2*g)))
		print(round(f,4))
		
		
		
		
	
   
-- OUTPUT:
4
0.7654
5
0.7265
6
0.7071
7
0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 10:20:24) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(x%2!=0):
		print(g)	
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(round(z,4))
	else:
		print(g)
		f=(sin(pi/g))/(sin((3*pi)/(2*g)))
		print(round(f,4))
		
		
		
		
	
   
-- OUTPUT:
4
0.7071
5
0.618
6
0.5774
7
0.555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 10:21:06) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(x%2==0):
		print(g)	
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(round(z,4))
	else:
		print(g)
		f=(sin(pi/g))/(sin((3*pi)/(2*g)))
		print(round(f,4))
		
		
		
		
	
   
-- OUTPUT:
4
0.7654
5
0.7265
6
0.7071
7
0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 10:23:20) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(g%2==0):
		print(g)	
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(round(z,4))
	else:
		print(g)
		f=(sin(pi/g))/(sin((3*pi)/(2*g)))
		print(round(f,4))
		
		
		
		
	
   
-- OUTPUT:
4
0.7071
5
0.7265
6
0.5774
7
0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 10:23:29) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(g%2==0):
		print(g)	
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(round(z,4))
	else:
		print(g)
		f=(sin(pi/g))/(sin((3*pi)/(2*g)))
		print(round(f,4))
		
		
		
		
	
   
-- EXECUTION TIME:
0.180824
-- TEST CASE 1:
---- input:
7
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
---- user output:
4
0.7071
5
0.7265
6
0.5774
7
0.6959
-- TEST CASE 2:
---- input:
5
---- correct output:
4 0.7071
5 0.7265
---- user output:
4
0.7071
5
0.7265
-- TEST CASE 3:
---- input:
16
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
8 0.5412
9 0.684
10 0.5257
11 0.6782
12 0.5176
13 0.6749
14 0.5129
15 0.6728
16 0.5098
---- user output:
4
0.7071
5
0.7265
6
0.5774
7
0.6959
8
0.5412
9
0.684
10
0.5257
11
0.6782
12
0.5176
13
0.6749
14
0.5129
15
0.6728
16
0.5098
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 10:35:44) 
-- CODE:
from math import*
x=int(input("Digite um numero inteiro: "))
g=3
z=0
while(x>g):
	g=g+1
	if(g%2==0):
		print(g)	
		z=(sin((pi/g)))/(sin((2*pi)/g))
		print(round(z,4))
	else:
		print(g)
		f=(sin(pi/g))/(sin((3*pi)/(2*g)))
		print(round(f,4))
		
		
		
		
	
   
-- EXECUTION TIME:
0.121573
-- TEST CASE 1:
---- input:
7
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
---- user output:
4
0.7071
5
0.7265
6
0.5774
7
0.6959
-- TEST CASE 2:
---- input:
5
---- correct output:
4 0.7071
5 0.7265
---- user output:
4
0.7071
5
0.7265
-- TEST CASE 3:
---- input:
16
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
8 0.5412
9 0.684
10 0.5257
11 0.6782
12 0.5176
13 0.6749
14 0.5129
15 0.6728
16 0.5098
---- user output:
4
0.7071
5
0.7265
6
0.5774
7
0.6959
8
0.5412
9
0.684
10
0.5257
11
0.6782
12
0.5176
13
0.6749
14
0.5129
15
0.6728
16
0.5098
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
